objects/BBB_Year_Bill_Book_Cust_PN__c.object
<CustomObject>
    <fields>
        <fullName>Sales_Office_Region__c</fullName>
        <formula>IF(Customer__r.DD1_SALES_OFFICE_CDE__c = &apos;S001&apos; , &apos; Americas&apos;, 
IF(Customer__r.DD1_SALES_OFFICE_CDE__c = &apos;S003&apos;, &apos;EMEA&apos;, 
IF(Customer__r.DD2_SALES_OFFICE_CDE__c = &apos;S025&apos;, &apos;Japan&apos;, 
IF(Customer__r.DD2_SALES_OFFICE_CDE__c = &apos;S026&apos;, &apos;Korea&apos;, 
IF(Customer__r.DD2_SALES_OFFICE_CDE__c = &apos;S018&apos;, &apos;South Asia(Pacific)&apos;, 
IF(Customer__r.DD3_SALES_OFFICE_CDE__c = &apos;S029&apos;, &apos;Taiwan&apos;, 
IF(AND (Customer__r.DD1_SALES_OFFICE_CDE__c = &apos;S002&apos;,NOT(CONTAINS(&apos;S025,S026,S018&apos;, Customer__r.DD2_SALES_OFFICE_CDE__c)),NOT(Customer__r.DD3_SALES_OFFICE_CDE__c = &apos;S029&apos;), SAP_Profit_Center_Code__c = &apos;0000000259&apos;),&apos;Taiwan&apos;, 
IF(AND (Customer__r.DD1_SALES_OFFICE_CDE__c = &apos;S002&apos;,NOT(CONTAINS(&apos;S025,S026,S018&apos;, Customer__r.DD2_SALES_OFFICE_CDE__c)),NOT(Customer__r.DD3_SALES_OFFICE_CDE__c = &apos;S029&apos;), SAP_Profit_Center_Code__c &lt;&gt; &apos;0000000259&apos;), &apos;China&apos;,&apos;Others&apos;) 
) 
) 
) 
) 
) 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Office Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCPN_Description_comb__c</fullName>
        <formula>Part_Number_Text__c  &amp; &quot; (&quot; &amp; Part_Description__c &amp; &quot;) &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TCPN (Description)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_L1_Code__c</fullName>
        <formula>Customer__r.Territory_L1_Code__c</formula>
        <label>Territory L1 Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>YTD_Billings_Growth__c</fullName>
        <description>Calculates the Growth Percent from VLY to CLY</description>
        <formula>IF(   Bill_Prior_Year_to_Date_Amount_USD__c  &gt;0,(Bill_Year_to_Date_Amount_USD__c - Bill_Prior_Year_to_Date_Amount_USD__c )/ Bill_Prior_Year_to_Date_Amount_USD__c,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>YTD Billings Growth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year_to_Date_Billings_Margin__c</fullName>
        <description>This formula calculates the &quot;year to date&quot; billings margin.</description>
        <formula>IF(Bill_Year_to_Date_Amount_USD__c &gt; 0, (Bill_Year_to_Date_Amount_USD__c - Bill_Year_To_Date_Cost_Amount__c) / Bill_Year_to_Date_Amount_USD__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year to Date Billings Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Year_to_Date_Bookings_Margin__c</fullName>
        <description>This formula calculates the &quot;year to date&quot; bookings margin.</description>
        <formula>IF(Book_Year_To_Date_Amount_USD__c &gt; 0, (Book_Year_To_Date_Amount_USD__c - Book_Year_To_Date_Cost_Amount__c) / Book_Year_To_Date_Amount_USD__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year to Date Bookings Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tmp__c</fullName>
        <formula>Customer__r.Territory_L1_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>tmp</label>
        <type>Text</type>
    </fields>
    <label>Yearly Booking/Billings By Part</label>
    <nameField>
        <displayFormat>YBBB-{0}</displayFormat>
        <label>Yearly BBB</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking/Billings By Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>